--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
-	<html lang="fr">
-		<head>
-		  <meta charset="utf-8">
-		  <title>JS</title>
-		  <link rel="icon" type="image/png" href="" />
-		  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		  <script src="script.js"></script>
-		</head>
+<html lang="fr">
+	<head>
+	  <meta charset="utf-8">
+	  <title>JS</title>
+	  <link rel="icon" type="image/png" href="" />
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <script src="script.js"></script>
+	</head>
+
+	<body>
+		<center>
+
+			<br><br><br>
+
+			<script>
+			    document.write(Math.max(...my_max));
+			</script>
+
+			<br><br>
+
+			<script>
+				document.write(Math.max(vowel_count.length));
+			</script>
+
+			<br><br>
+
+			<script>
+				document.write(reverse);
+			</script>
+		</center>
+	</body>
+</html>
