--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 	<body>
 		<center>
+			<h1 style="font-size: 70px; font-family: impact;">FIRST TRY IN JS</h1>
 
-			<br><br><br>
+			<br>
 
 			<h1>
 			<script>
@@ -19,15 +20,11 @@
 			</script>
 			</h1>
 
-			<br>
-
 			<h1>
 			<script>
 				document.write(Math.max(vowel_count.length));
 			</script>
 			</h1>
-
-			<br>
 
 			<h1>
 			<script>
