--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  <script src="script.js"></script>
 	</head>
 
-	<body>
+	<body style="background-color: yellow;">
 		<center>
 			<h1 style="font-size: 70px; font-family: impact;">FIRST TRY IN JS</h1>
 
