--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 	  <meta charset="utf-8">
-	  <title>JS</title>
+	  <title>FIRST TRY IN JS</title>
 	  <link rel="icon" type="image/png" href="" />
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <script src="script.js"></script>
